--- a/index.html
+++ b/index.html
@@ -1,47 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introduction Page</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    
-</head>
-<body>
-    <header>
-        <h1>Corey Burkett</h1>
-    </header>
-    <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link active" href="index.html">Biography</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact Info</a>
-        </li>
-      </ul>
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Introduction Page</title>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+      <link rel="stylesheet" href="style.css">
+  </head>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <br>
-                <h2>About Me</h2>
-                <hr style="height:3px;border-width:0;color:black;background-color:black">
-                <br>
-                <img src="img/bio-img.JPG" id="bio-img" alt="My wife, my dog Cosmo, and I." style="width:550px;height:400px">
-                <div class="transbox">
-                    <p>I am attending the well-known University of California, Irvine Coding Boot Camp to become a Web/ Software Developer. I am currently a full-time student pursuing a Bachelor's degree in Business Administration with a Concentration in Information Systems. I served 4 years in the United States Marine Corps as a Rifleman with 2nd Battalion, 4th Marines at Camp Pendleton, California.</p>
-                </div>
-            </div>
+  <body>
+    <div class="container-center">
+      <div class="row-1">
+        <div class="col-xs-12">
+          <header>
+            <h1>Corey Burkett</h1>
+          </header>
         </div>
+      </div>
+
+      <div class="row-2">
+        <div class="col-xs-9">
+          <ul class="nav justify-content-center">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">Biography</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact Info</a>
+            </li>
+          </ul>
+        </div>
+      </div>    
+
+      <div class="row-3">
+        <div class="col-xs-6">
+          <br>
+          <h2>About Me</h2>
+          <hr style="height:3px;border-width:0;color:black;background-color:black">
+          <br>
+        </div>
+      </div>  
+
+      <div class="row-4">
+        <div class="col-xs-12">
+          <img src="img/bio-img.JPG" id="bio-img" alt="My wife, my dog Cosmo, and I." style="width:550px;height:400px">
+          <div class="transbox">
+            <p>I am attending the well-known University of California, Irvine Coding Boot Camp to become a Web/ Software Developer. I am currently a full-time student pursuing a Bachelor's degree in Business Administration with a Concentration in Information Systems. I served 4 years in the United States Marine Corps as a Rifleman with 2nd Battalion, 4th Marines at Camp Pendleton, California.</p>
+          </div>
+        </div>
+      </div>
+
+      <br><br><br><br>
+
+      <footer>
+        <p style="font-family: sans-serif;font-size: 16px;text-align: center;">© Copyright</p>
+      </footer>
     </div>
 
-    <br><br><br><br>
-
-    <p style="font-family: sans-serif;font-size: 16px;text-align: center;">© Copyright</p>
-
-</body>
+  </body>
 </html>
