--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="container-center">
+    <div class="container-fluid">
       <div class="row-1">
         <div class="col-xs-12">
           <header>
