--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container-fluid">
       <div class="row-1">
-        <div class="col-xs-12">
+        <div class="col">
           <header>
             <h1>Corey Burkett</h1>
           </header>
@@ -19,7 +19,7 @@
       </div>
 
       <div class="row-2">
-        <div class="col-xs-9">
+        <div class="col">
           <ul class="nav justify-content-center">
             <li class="nav-item">
               <a class="nav-link active" href="index.html">Biography</a>
@@ -33,9 +33,11 @@
           </ul>
         </div>
       </div>    
+    </div>
 
+    <div class="container-fluid">
       <div class="row-3">
-        <div class="col-xs-6">
+        <div class="col">
           <br>
           <h2>About Me</h2>
           <hr style="height:3px;border-width:0;color:black;background-color:black">
@@ -44,7 +46,7 @@
       </div>  
 
       <div class="row-4">
-        <div class="col-xs-12">
+        <div class="col">
           <img src="img/bio-img.JPG" id="bio-img" alt="My wife, my dog Cosmo, and I." style="width:550px;height:400px">
           <div class="transbox">
             <p>I am attending the well-known University of California, Irvine Coding Boot Camp to become a Web/ Software Developer. I am currently a full-time student pursuing a Bachelor's degree in Business Administration with a Concentration in Information Systems. I served 4 years in the United States Marine Corps as a Rifleman with 2nd Battalion, 4th Marines at Camp Pendleton, California.</p>
