--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,9 @@
   </head>
 
   <body>
-    <div class="container-center">
+    <div class="container-fluid">
       <div class="row-1">
-        <div class="col-xs-12">
+        <div class="col">
           <header>
             <h1>Corey Burkett</h1>
           </header>
@@ -19,7 +19,7 @@
       </div>
 
       <div class="row-2">
-        <div class="col-xs-12">
+        <div class="col">
           <ul class="nav justify-content-center">
             <li class="nav-item">
               <a class="nav-link active" href="index.html">Biography</a>
@@ -33,13 +33,23 @@
           </ul>
         </div>
       </div>    
+    </div>
 
-      <br><br><br><br>
+    <div class="container-fluid">
+      <div class="row-index1">
+        <div class="col">
+          <br>
+          <h2>Contact Information</h2>
+          <hr style="height:3px;border-width:0;color:black;background-color:black">
+          <br>
+        </div>
+      </div>
+    </div>
+
+    <br><br><br><br>
 
       <footer>
         <p style="font-family: sans-serif;font-size: 16px;text-align: center;">© Copyright</p>
       </footer>
-    </div>
-
   </body>
 </html>
