--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="container-fluid">
-      <div class="row-3">
+      <div class="row-index1">
         <div class="col">
           <br>
           <h2>About Me</h2>
@@ -45,7 +45,7 @@
         </div>
       </div>  
 
-      <div class="row-4">
+      <div class="row">
         <div class="col">
           <img src="img/bio-img.JPG" id="bio-img" alt="My wife, my dog Cosmo, and I." style="width:550px;height:400px">
           <div class="transbox">
