Made portfolio responsive

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="container-fluid">
-      <div class="row-index1">
+      <div class="row-3">
         <div class="col">
           <br>
           <h2>About Me</h2>
@@ -47,7 +47,7 @@
 
       <div class="row">
         <div class="col">
-          <img src="img/bio-img.JPG" id="bio-img" alt="My wife, my dog Cosmo, and I." style="width:550px;height:400px">
+          <img src="img/bio-img.JPG" id="bio-img" alt="My wife, my dog Cosmo, and I.">
           <div class="transbox">
             <p>I am attending the well-known University of California, Irvine Coding Boot Camp to become a Web/ Software Developer. I am currently a full-time student pursuing a Bachelor's degree in Business Administration with a Concentration in Information Systems. I served 4 years in the United States Marine Corps as a Rifleman with 2nd Battalion, 4th Marines at Camp Pendleton, California.</p>
           </div>
