--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="container-fluid">
-      <div class="row-index1">
+      <div class="row-3">
         <div class="col">
           <br>
           <h2>Contact Information</h2>
