--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="container-fluid">
-      <div class="row-index1">
+      <div class="row-3">
         <div class="col">
           <br>
           <h2>Portfolio</h2>
@@ -44,12 +44,37 @@
           <br>
         </div>
       </div>
-    </div>
 
-    <br><br><br><br>
+      <div class="row-4">
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <br><br><br><br>
 
       <footer>
         <p style="font-family: sans-serif;font-size: 16px;text-align: center;">© Copyright</p>
       </footer>
+    </div>
+
   </body>
 </html>
