--- a/portfolio.html
+++ b/portfolio.html
@@ -44,37 +44,60 @@
           <br>
         </div>
       </div>
+    </div>
 
-      <div class="row-4">
-        <div class="col">
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+    <div class="container-fluid-2">
+      <div class="row row-cols-1 row-cols-md-2">
+        <div class="col mb-4">
+          <div class="card">
+            <br>
+            <img src="img/refactor.jpg" class="card-img-top" alt="Preview of refactored website.">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Horiseon - Refactored</h5>
+              <p class="card-text">The purpose of this build was to refactor an existing webpage to make it more accessible for disabled users.</p>
             </div>
           </div>
         </div>
-
-        <div class="col">
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+        <div class="col mb-4">
+          <div class="card">
+            <br>
+            <img src="img/refactor.jpg" class="card-img-top" alt="Preview of refactored website.">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Horiseon - Refactored</h5>
+              <p class="card-text">The purpose of this build was to refactor an existing webpage to make it more accessible for disabled users.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <br>
+            <img src="img/refactor.jpg" class="card-img-top" alt="Preview of refactored website.">
+            <div class="card-body">
+              <h5 class="card-title">Horiseon - Refactored</h5>
+              <p class="card-text">The purpose of this build was to refactor an existing webpage to make it more accessible for disabled users.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <br>
+            <img src="img/refactor.jpg" class="card-img-top" alt="Preview of refactored website.">
+            <div class="card-body">
+              <h5 class="card-title">Horiseon - Refactored</h5>
+              <p class="card-text">The purpose of this build was to refactor an existing webpage to make it more accessible for disabled users.</p>
             </div>
           </div>
         </div>
       </div>
-
-      <br><br><br><br>
-
-      <footer>
-        <p style="font-family: sans-serif;font-size: 16px;text-align: center;">© Copyright</p>
-      </footer>
     </div>
+
+
+    <br><br><br><br>
+
+    <footer>
+      <p style="font-family: sans-serif;font-size: 16px;text-align: center;">© Copyright</p>
+    </footer>
+    
 
   </body>
 </html>
