--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,13 @@
   <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Introduction Page</title>
+      <title>Contact Information</title>
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
       <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
+    <!--Heading and Navigation Bar-->
     <div class="container-fluid">
       <div class="row-1">
         <div class="col">
@@ -28,7 +29,7 @@
               <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact Info</a>
+              <a class="nav-link" href="contact.html">Contact Information</a>
             </li>
           </ul>
         </div>
@@ -46,6 +47,7 @@
       </div>
     </div>
 
+    <!--Contact Box-->
     <div class="containder-fluid">
       <div class="row-cont">
         <div class="col">
@@ -89,7 +91,7 @@
                 </form>
                   <div class="text-center text-md-left">
                     <!--Inside onClick = "document.getElementById('contact-form').submit();"-->
-                    <a class="btn btn-primary" onclick="...">Send</a>
+                    <a class="btn btn-primary" onclick="">Send</a>
                   </div>
                   <div class="status"></div>
               </div>
@@ -118,8 +120,8 @@
 
     <br><br><br><br>
 
-    <footer>
-      <p style="font-family: sans-serif;font-size: 16px;text-align: center;">© Copyright</p>
+    <footer class="footer">
+      <p style="font-family: sans-serif;font-size: 16px;text-align: center;">© Copyright 2020</p>
     </footer>
   </body>
 </html>
