--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Introduction Page</title>
+      <title>Biography</title>
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
       <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
+    <!--Heading and Navigation Bar-->
     <div class="container-fluid">
       <div class="row-1">
         <div class="col">
@@ -28,7 +29,7 @@
               <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact Info</a>
+              <a class="nav-link" href="contact.html">Contact Information</a>
             </li>
           </ul>
         </div>
@@ -57,8 +58,9 @@
 
     <br><br><br><br>
 
-    <footer>
-      <p style="font-family: sans-serif;font-size: 16px;text-align: center;">© Copyright</p>
+    <!--Sticky Footer-->
+    <footer class="footer">
+        <p style="font-family: sans-serif;font-size: 16px;text-align: center;">© Copyright 2020</p>
     </footer>
 
   </body>
