Added new section in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,10 +62,10 @@
         <div class="col mb-4">
           <div class="card">
             <br>
-            <img src="img/refactor.jpg" class="card-img-top" alt="Preview of refactored website.">
+            <img src="img/rps.jpg" class="card-img-top" alt="Rock, paper, scissors application.">
             <div class="card-body">
-              <h5 class="card-title">Horiseon - Refactored</h5>
-              <p class="card-text">The purpose of this build was to refactor an existing webpage to make it more accessible for disabled users.</p>
+              <h5 class="card-title">Rock, Paper, Scissors</h5>
+              <p class="card-text">The purpose of this activity was to construct a running application that would allow you to play rock, paper, scissors against a computer.</p>
             </div>
           </div>
         </div>
